# bam2tensor

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEAS.md  LICENSE  README.md  SECURITY.md  data.json  noxfile.py  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/actions/setup-env/: action.yml
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_21b632de40bb3de8___init___py.html  z_21b632de40bb3de8___main___py.html  z_21b632de40bb3de8_embedding_py.html  z_21b632de40bb3de8_functions_py.html  z_21b632de40bb3de8_inspect_py.html  z_21b632de40bb3de8_metadata_py.html  z_21b632de40bb3de8_reference_py.html  z_a44f0ac069e85531_test_duplication_py.html  z_a44f0ac069e85531_test_embedding_py.html  z_a44f0ac069e85531_test_functions_py.html  z_a44f0ac069e85531_test_main_py.html  z_a44f0ac069e85531_test_reference_py.html
src/bam2tensor/: __init__.py  __main__.py  embedding.py  functions.py  inspect.py  metadata.py  reference.py
tests/: __init__.py  test.bam.bai  test_duplication.py  test_embedding.py  test_fasta.fa  test_filters.py  test_functions.py  test_inspect.py  test_main.py  test_metadata.py  test_parallel.py  test_reference.py
