[project]
name = "bam2tensor"
version = "1.5"
description = "Bam2Tensor"
authors = [{ name = "Nick Semenkovich", email = "semenko@alum.mit.edu" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Development Status :: 4 - Beta"]
dependencies = [
    "click>=8.0.1",
    "numpy>=1.26.0",
    "scipy>=1.11.4",
    "tqdm>=4.66.1",
    "biopython>=1.81",
    "pysam>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/mcwdsi/bam2tensor"
Repository = "https://github.com/mcwdsi/bam2tensor"
Documentation = "https://mcwdsi.github.io/bam2tensor"
Changelog = "https://github.com/mcwdsi/bam2tensor/releases"

[project.scripts]
bam2tensor = "bam2tensor.__main__:main"

[dependency-groups]
dev = [
    "pygments>=2.18.0",
    "black[jupyter]>=24.0.0",
    "coverage[toml]>=7.0",
    "darglint>=1.8.1",
    "furo>=2024.1.29",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pre-commit-hooks>=4.6.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "sphinx>=7.3.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-autodoc-typehints>=2.1.0",
    "sphinx-click>=6.0.0",
    "typeguard>=4.3.0",
    "xdoctest[colors]>=1.1.0",
    "myst-parser>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["bam2tensor", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.mypy]
check_untyped_defs = true
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py310"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
]
ignore = [
    "ANN202", # Don't requiere return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
